// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot Should match with auth 1`] = `
<header
  className="header"
>
  <a
    className="header__logo"
    href="/"
    onClick={[Function]}
  />
  <div
    className="header__input"
  >
    <input
      className="input"
      onKeyUp={[Function]}
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root icon__search"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </svg>
  </div>
  <div
    className="header__menu"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root menu__icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
    </svg>
    <div
      className="menu__content"
    >
      <div
        className="content__list"
      >
        <a
          className="list__item"
          href="/profile"
          onClick={[Function]}
        >
          Profile
        </a>
        
      </div>
    </div>
  </div>
</header>
`;

exports[`Header snapshot Should match without auth 1`] = `
<header
  className="header"
>
  <a
    className="header__logo"
    href="/"
    onClick={[Function]}
  />
  <div
    className="header__input"
  >
    <input
      className="input"
      onKeyUp={[Function]}
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root icon__search"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </svg>
  </div>
  
</header>
`;
